# ai-coworker

./: .env.example  README.md  pyproject.toml
documents/: othello-srs.md
examples/2024-07-17-mixtral-8x7b-othello/: board.py  game.py  main.py  test_main.py
examples/2024-07-18-mixtral-8x22b-othello/: main.py
examples/2024-07-19-random-spinning-wheell/: chat-gpt-4o.md  codellama-70b.md  deepseek-coder-v2-16b.md  mixtral-8x22b.md  mixtral-8x7b.md  phind-codellama-34b.md
resources/data/: sample-LLM-Powered-Autonomous-Agents.txt  sample-dummytext.txt
resources/samples/: result.02.txt  result.03.txt  result.txt
src/: example-dotenv.py  tutorial-duckduckgosearch.py  tutorial-langchain-basic.py
src/auto-coding-crew/: agents.py  main-auto-gen-test-code.py  tasks.py
src/code-review-bot/: README.MD  get_code_review_feedback.py  main.py  review_code_with_language_model.py
src/code-review-bot/libraries/: create_github_urls.py  extract_pull_request_number.py  fetch_pull_request_changed_files.py  fetch_pull_requests.py  parse_metadata_from_pull_request_url.py  post_github_pull_request_comment.py  pull_request.py
src/deployment/: Dockerfile
src/playground/: tutorial-crewai.py  tutorial-search.py
src/playground/auto-coding-crew/: main.py
src/playground/sample-chat-server/: README.md  pyproject.toml
src/playground/sample-knowledge-graph/: eval-compare.txt  load-content-from-url.py  main-remote.py  main-using-ollama-with-schema.py  main-using-ollama.py  main-using-openai.py  main.py  main02.py  main03-ask.py  result-gemma2-27b.txt  result-gemma2-2b.txt  (+3 more)
(+10 files in other folders)
